update mark interesting

--- a/logstash.conf
+++ b/logstash.conf
@@ -45,7 +45,7 @@ filter {
    mutate { add_field => { "Acknowledged" => "False" } }
    mutate { add_field => { "Action Log" => "" } }
    mutate { add_field => { "Mark Interesting" =>
-    "http://localhost:9999/?srcaddr=%{source-address}&srcport=%{source-port}&destaddr=%{destination-address}&destport=%{destination-port}&servicename=%{service-name}&srczone=%{source-zone-name}&destzone=%{destination-zone-name}"
+    "?srcaddr=%{source-address}&srcport=%{source-port}&destaddr=%{destination-address}&destport=%{destination-port}&servicename=%{service-name}&srczone=%{source-zone-name}&destzone=%{destination-zone-name}"
    } }
    mutate { add_field => { "Vendor" => "Juniper" } }
 
