--- a/ztn.yml
+++ b/ztn.yml
@@ -1,5 +1,5 @@
 
 ## Security Director Fields
-sd.ip_addr: "172.25.125.101"
-sd.user: "super"
-sd.password: "Embe1mpls!"
+sd.ip_addr: "0.0.0.0"
+sd.user: "user"
+sd.password: "password"
