test ztn docker container

--- a/ztn.yml
+++ b/ztn.yml
@@ -1,5 +1,5 @@
 
 ## Security Director Fields
 sd.ip_addr: "172.25.58.235"
-sd.user: "super"
-sd.password: "jnpr123!"
+sd.user: "admin"
+sd.password: "qwe123QWE"
