ztn docker image;scheduler;graphing

--- a/logstash.conf
+++ b/logstash.conf
@@ -14,7 +14,7 @@ filter {
     if [message] =~ "RT_FLOW" {
         grok {
            match => {
-                "message" => "<%{NUMBER:priority_code}>%{NUMBER:version} %{TIMESTAMP_ISO8601:syslog_timestamp} %{HOSTNAME:hostname} %{WORD:process} - %{WORD:processID} \[%{DATA:platform} %{DATA:kv_pairs}\](%{GREEDYDATA:message})?"
+                "message" => "<%{NUMBER:priority_code}>%{NUMBER:version} %{TIMESTAMP_ISO8601:syslog_timestamp} %{HOSTNAME:hostname} %{WORD:process} - %{WORD:processID} \[%{DATA:kv_pairs}\](%{GREEDYDATA:message})?"
            }
         }
 
